# Particle

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  USAGE.md  Usage.md
include/: App.h  SDLstuff.h  UI.h  color.h  particle.h  simulation.h
include/gui/: UI.h  imGuiElements.h  imGuiInitialiser.h  particle.h
include/window/: OpenGL_initialiser.h  SDL_initialiser.h  Window.h  input.h  shader.h
libs/: SDL2-2.30.4
libs/imgui/: imgui.ini  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  main.cpp
res/shaders/: shader.vert
src/: App.cpp  App.h  CMakeLists.txt  SDLstuff.cpp  UI.cpp  UI.h  color.h  font.h  main.cpp  particle.cpp  particle.h  simulation.cpp  timer.h
src/gui/: UI.cpp  imGuiElements.cpp  imGuiInitialiser.cpp  particle.cpp
src/window/: OpenGL_initialiser.cpp  SDL_initialiser.cpp  Window.cpp  input.cpp  shader.cpp
